fixed layout issue

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -162,6 +162,11 @@
         margin: 1rem auto;
         display: flex;
     }
+    .basic_container img {
+        margin: 0 auto;
+        margin: 1rem auto;
+        display: flex;
+    }
     .img_container {
         width: max-content;
         border: 1px solid;
@@ -177,6 +182,14 @@
         display: flex;
         flex-direction: row;
         justify-content: space-around;
+    }
+    /* Avatar Starting Here */
+    .avt_cont {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: baseline;
+        
     }
 
     /******  Colors ********/
